[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/game_elements/background/BackgroundTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/game_elements/background/Background.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.875, 559 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1015.5, 4.5 )

[node name="Background" type="Node2D"]
script = ExtResource( 2 )

[node name="Tiles" type="Node2D" parent="."]

[node name="BackgroundTile" parent="Tiles" instance=ExtResource( 1 )]

[node name="BackgroundTile2" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1980, 0 )

[node name="BackgroundTile3" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( -1980, 0 )

[node name="BackgroundTile4" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 0, 1080 )

[node name="BackgroundTile5" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 0, -1080 )

[node name="BackgroundTile6" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1980, 1080 )

[node name="BackgroundTile7" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1980, -1080 )

[node name="BackgroundTile8" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( -1980, 1080 )

[node name="BackgroundTile9" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( -1980, -1080 )

[node name="Walls" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="Area2D" parent="Walls"]
position = Vector2( -994, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="Walls"]
position = Vector2( 993, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
shape = SubResource( 1 )

[node name="Up" type="Area2D" parent="Walls"]
position = Vector2( 2, -545 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Up"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="Down" type="Area2D" parent="Walls"]
position = Vector2( 0, 544 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Down"]
shape = SubResource( 2 )

[node name="Foreground" type="Node2D" parent="."]

[connection signal="body_entered" from="Walls/Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Walls/Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Walls/Up" to="." method="_on_Up_body_entered"]
[connection signal="body_entered" from="Walls/Down" to="." method="_on_Down_body_entered"]
